# iDesktop.Linux

./: .gitignore
iDoc/ciconia.kzykhys.com/: development.html  index.html  syntax.html
iDoc/ciconia.kzykhys.com/api/: index.html
iDoc/ciconia.kzykhys.com/api/Ciconia/: Ciconia.html  HashRegistry.html  Markdown.html
iDoc/ciconia.kzykhys.com/api/Ciconia/Common/: Collection.html  Tag.html  Text.html
iDoc/ciconia.kzykhys.com/api/Ciconia/Console/: Application.html
iDoc/ciconia.kzykhys.com/api/Ciconia/Diagnose/: Ciconia.html  Event.html  Markdown.html
iDoc/ciconia.kzykhys.com/api/Ciconia/Event/: EmitterAwareInterface.html  EmitterAwareTrait.html  EmitterInterface.html  EmitterTrait.html
iDoc/ciconia.kzykhys.com/api/Ciconia/Exception/: MarkdownException.html  SyntaxError.html
iDoc/ciconia.kzykhys.com/assets/css/: kzykhys.com.css
iDoc/ciconia.kzykhys.com/docs/: extend.html  index.html  recipes.html  usage.html
iDoc/ciconia.kzykhys.com/docs/recipe/: dic.html  redistribute.html  twig.html
iDoc/sundries/: erl.gl
iPlaylist/: ACDC.xspf  ACDEAN.xspf  alan.watts.xspf  aliazar.favs.2.xspf  aliazar.favs.xspf  aliazar.xspf  chaartar.xspf  dariush.favs.xspf  dayan.xspf  deklame.favs.xspf  favs.all.in.one.xspf  favs.old.xspf  hayedeh.xspf  ibo.favz.xspf  jason.aldean.xspf  light.xspf  moin.xspf  pirbadian.xspf  relax.xspf  shamlu.xspf  siavash.favs.xspf  siavash.hekayat.xspf  turkish.ask.xspf  turkish.xspf
iSundries/sfml/: CMakeLists.txt  build
iSundries/sfml/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
(+26 files in other folders)
